updating map tests

--- a/map_tests.ipynb
+++ b/map_tests.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "source": [
     "with urlopen('https://raw.githubusercontent.com/plotly/datasets/master/geojson-counties-fips.json') as response:\n",
     "    counties = json.load(response)\n",
@@ -30,21 +30,245 @@
    ],
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'google_mobility_county.csv'",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-d81d8ed0d864>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mcounties\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"features\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"google_mobility_county.csv\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mrecent_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"year\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m2022\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m&\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"month\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m&\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"day\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m==\u001b[0m \u001b[0;36m12\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/pandas/util/_decorators.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    309\u001b[0m                     \u001b[0mstacklevel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstacklevel\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    310\u001b[0m                 )\n\u001b[0;32m--> 311\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    312\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    313\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/pandas/io/parsers/readers.py\u001b[0m in \u001b[0;36mread_csv\u001b[0;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, squeeze, prefix, mangle_dupe_cols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, encoding_errors, dialect, error_bad_lines, warn_bad_lines, on_bad_lines, delim_whitespace, low_memory, memory_map, float_precision, storage_options)\u001b[0m\n\u001b[1;32m    678\u001b[0m     \u001b[0mkwds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkwds_defaults\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    679\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 680\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0m_read\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    681\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    682\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/pandas/io/parsers/readers.py\u001b[0m in \u001b[0;36m_read\u001b[0;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[1;32m    573\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    574\u001b[0m     \u001b[0;31m# Create the parser.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 575\u001b[0;31m     \u001b[0mparser\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTextFileReader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    576\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    577\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mchunksize\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0miterator\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/pandas/io/parsers/readers.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, f, engine, **kwds)\u001b[0m\n\u001b[1;32m    931\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    932\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhandles\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mIOHandles\u001b[0m \u001b[0;34m|\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 933\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_make_engine\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mengine\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    934\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    935\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/pandas/io/parsers/readers.py\u001b[0m in \u001b[0;36m_make_engine\u001b[0;34m(self, f, engine)\u001b[0m\n\u001b[1;32m   1215\u001b[0m             \u001b[0;31m# \"Union[str, PathLike[str], ReadCsvBuffer[bytes], ReadCsvBuffer[str]]\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1216\u001b[0m             \u001b[0;31m# , \"str\", \"bool\", \"Any\", \"Any\", \"Any\", \"Any\", \"Any\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1217\u001b[0;31m             self.handles = get_handle(  # type: ignore[call-overload]\n\u001b[0m\u001b[1;32m   1218\u001b[0m                 \u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1219\u001b[0m                 \u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/pandas/io/common.py\u001b[0m in \u001b[0;36mget_handle\u001b[0;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[0m\n\u001b[1;32m    787\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mioargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mencoding\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;34m\"b\"\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mioargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    788\u001b[0m             \u001b[0;31m# Encoding\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 789\u001b[0;31m             handle = open(\n\u001b[0m\u001b[1;32m    790\u001b[0m                 \u001b[0mhandle\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    791\u001b[0m                 \u001b[0mioargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'google_mobility_county.csv'"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>fips</th>\n",
+       "      <th>gps_retail_and_recreation</th>\n",
+       "      <th>gps_grocery_and_pharmacy</th>\n",
+       "      <th>gps_parks</th>\n",
+       "      <th>gps_transit_stations</th>\n",
+       "      <th>gps_workplaces</th>\n",
+       "      <th>gps_residential</th>\n",
+       "      <th>gps_away_from_home</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1812936</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1003</td>\n",
+       "      <td>.0129</td>\n",
+       "      <td>.189</td>\n",
+       "      <td>.214</td>\n",
+       "      <td>-.0229</td>\n",
+       "      <td>-.0343</td>\n",
+       "      <td>.0271</td>\n",
+       "      <td>-.0326</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1812965</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1073</td>\n",
+       "      <td>-.127</td>\n",
+       "      <td>.01</td>\n",
+       "      <td>.0764</td>\n",
+       "      <td>-.284</td>\n",
+       "      <td>-.149</td>\n",
+       "      <td>.0471</td>\n",
+       "      <td>-.0572</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1812969</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1083</td>\n",
+       "      <td>-.0357</td>\n",
+       "      <td>.103</td>\n",
+       "      <td>.0414</td>\n",
+       "      <td>.</td>\n",
+       "      <td>-.0814</td>\n",
+       "      <td>.0443</td>\n",
+       "      <td>-.0532</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1812972</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1089</td>\n",
+       "      <td>-.121</td>\n",
+       "      <td>.0371</td>\n",
+       "      <td>.136</td>\n",
+       "      <td>-.296</td>\n",
+       "      <td>-.171</td>\n",
+       "      <td>.0586</td>\n",
+       "      <td>-.0695</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1812976</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1097</td>\n",
+       "      <td>-.104</td>\n",
+       "      <td>.0257</td>\n",
+       "      <td>-.0786</td>\n",
+       "      <td>-.164</td>\n",
+       "      <td>-.111</td>\n",
+       "      <td>.0343</td>\n",
+       "      <td>-.0425</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1815096</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "      <td>55133</td>\n",
+       "      <td>-.136</td>\n",
+       "      <td>.03</td>\n",
+       "      <td>.0829</td>\n",
+       "      <td>.</td>\n",
+       "      <td>-.17</td>\n",
+       "      <td>.0643</td>\n",
+       "      <td>-.0723</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1815099</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "      <td>55139</td>\n",
+       "      <td>-.0971</td>\n",
+       "      <td>.0229</td>\n",
+       "      <td>.253</td>\n",
+       "      <td>.</td>\n",
+       "      <td>-.166</td>\n",
+       "      <td>.04</td>\n",
+       "      <td>-.0458</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1815106</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "      <td>56021</td>\n",
+       "      <td>-.119</td>\n",
+       "      <td>-.106</td>\n",
+       "      <td>-.0129</td>\n",
+       "      <td>-.179</td>\n",
+       "      <td>-.0986</td>\n",
+       "      <td>.0357</td>\n",
+       "      <td>-.0437</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1815108</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "      <td>56025</td>\n",
+       "      <td>-.121</td>\n",
+       "      <td>-.07</td>\n",
+       "      <td>.03</td>\n",
+       "      <td>-.0486</td>\n",
+       "      <td>-.177</td>\n",
+       "      <td>.0329</td>\n",
+       "      <td>-.0404</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1815112</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "      <td>56039</td>\n",
+       "      <td>-.103</td>\n",
+       "      <td>.</td>\n",
+       "      <td>.179</td>\n",
+       "      <td>-.0471</td>\n",
+       "      <td>-.139</td>\n",
+       "      <td>.</td>\n",
+       "      <td>.</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>632 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         year  month  day   fips gps_retail_and_recreation  \\\n",
+       "1812936  2022      2   12   1003                     .0129   \n",
+       "1812965  2022      2   12   1073                     -.127   \n",
+       "1812969  2022      2   12   1083                    -.0357   \n",
+       "1812972  2022      2   12   1089                     -.121   \n",
+       "1812976  2022      2   12   1097                     -.104   \n",
+       "...       ...    ...  ...    ...                       ...   \n",
+       "1815096  2022      2   12  55133                     -.136   \n",
+       "1815099  2022      2   12  55139                    -.0971   \n",
+       "1815106  2022      2   12  56021                     -.119   \n",
+       "1815108  2022      2   12  56025                     -.121   \n",
+       "1815112  2022      2   12  56039                     -.103   \n",
+       "\n",
+       "        gps_grocery_and_pharmacy gps_parks gps_transit_stations  \\\n",
+       "1812936                     .189      .214               -.0229   \n",
+       "1812965                      .01     .0764                -.284   \n",
+       "1812969                     .103     .0414                    .   \n",
+       "1812972                    .0371      .136                -.296   \n",
+       "1812976                    .0257    -.0786                -.164   \n",
+       "...                          ...       ...                  ...   \n",
+       "1815096                      .03     .0829                    .   \n",
+       "1815099                    .0229      .253                    .   \n",
+       "1815106                    -.106    -.0129                -.179   \n",
+       "1815108                     -.07       .03               -.0486   \n",
+       "1815112                        .      .179               -.0471   \n",
+       "\n",
+       "        gps_workplaces gps_residential gps_away_from_home  \n",
+       "1812936         -.0343           .0271             -.0326  \n",
+       "1812965          -.149           .0471             -.0572  \n",
+       "1812969         -.0814           .0443             -.0532  \n",
+       "1812972          -.171           .0586             -.0695  \n",
+       "1812976          -.111           .0343             -.0425  \n",
+       "...                ...             ...                ...  \n",
+       "1815096           -.17           .0643             -.0723  \n",
+       "1815099          -.166             .04             -.0458  \n",
+       "1815106         -.0986           .0357             -.0437  \n",
+       "1815108          -.177           .0329             -.0404  \n",
+       "1815112          -.139               .                  .  \n",
+       "\n",
+       "[632 rows x 11 columns]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 9
     }
    ],
    "metadata": {}
@@ -53,7 +277,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "fig = px.choropleth(recent_data_parks_top100, geojson=counties, locations='fips', color='gps_parks',\n",
+    "fig = px.choropleth(recent_data, geojson=counties, locations='fips', color='gps_parks',\n",
     "                           color_continuous_scale=\"Viridis\",\n",
     "                           range_color=(0, 12),\n",
     "                           scope=\"usa\",\n",
