--- a/mobility.ipynb
+++ b/mobility.ipynb
@@ -14,285 +14,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mobility = pd.read_csv(\"google_mobility_county.csv\", dtype= {\"countyfips\": str})\n",
-    "mobility = mobility.replace('.', None)\n",
-    "mobility = mobility.replace('.', 0)"
+    "mobility = mobility.replace('.', None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>year</th>\n",
-       "      <th>month</th>\n",
-       "      <th>day</th>\n",
-       "      <th>countyfips</th>\n",
-       "      <th>gps_retail_and_recreation</th>\n",
-       "      <th>gps_grocery_and_pharmacy</th>\n",
-       "      <th>gps_parks</th>\n",
-       "      <th>gps_transit_stations</th>\n",
-       "      <th>gps_workplaces</th>\n",
-       "      <th>gps_residential</th>\n",
-       "      <th>gps_away_from_home</th>\n",
-       "      <th>date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>2</td>\n",
-       "      <td>24</td>\n",
-       "      <td>01001</td>\n",
-       "      <td>-0.02290</td>\n",
-       "      <td>-0.00857</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>0.03290</td>\n",
-       "      <td>0.00571</td>\n",
-       "      <td>-0.00626</td>\n",
-       "      <td>2020-02-24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>2</td>\n",
-       "      <td>24</td>\n",
-       "      <td>01003</td>\n",
-       "      <td>0.11600</td>\n",
-       "      <td>0.11600</td>\n",
-       "      <td>0.387</td>\n",
-       "      <td>0.0771</td>\n",
-       "      <td>-0.00143</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.00442</td>\n",
-       "      <td>2020-02-24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>2</td>\n",
-       "      <td>24</td>\n",
-       "      <td>01005</td>\n",
-       "      <td>0.01860</td>\n",
-       "      <td>-0.12300</td>\n",
-       "      <td>0.387</td>\n",
-       "      <td>0.0771</td>\n",
-       "      <td>0.01570</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.00442</td>\n",
-       "      <td>2020-02-24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>2</td>\n",
-       "      <td>24</td>\n",
-       "      <td>01007</td>\n",
-       "      <td>-0.01140</td>\n",
-       "      <td>0.00429</td>\n",
-       "      <td>0.387</td>\n",
-       "      <td>0.0771</td>\n",
-       "      <td>0.03570</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.00442</td>\n",
-       "      <td>2020-02-24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>2</td>\n",
-       "      <td>24</td>\n",
-       "      <td>01009</td>\n",
-       "      <td>-0.00286</td>\n",
-       "      <td>-0.01140</td>\n",
-       "      <td>0.387</td>\n",
-       "      <td>0.0771</td>\n",
-       "      <td>0.01290</td>\n",
-       "      <td>0.01860</td>\n",
-       "      <td>-0.02000</td>\n",
-       "      <td>2020-02-24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1815109</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>2</td>\n",
-       "      <td>12</td>\n",
-       "      <td>56029</td>\n",
-       "      <td>-0.03290</td>\n",
-       "      <td>-0.07000</td>\n",
-       "      <td>0.030</td>\n",
-       "      <td>-0.0486</td>\n",
-       "      <td>-0.07140</td>\n",
-       "      <td>0.03290</td>\n",
-       "      <td>-0.04040</td>\n",
-       "      <td>2022-02-12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1815110</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>2</td>\n",
-       "      <td>12</td>\n",
-       "      <td>56033</td>\n",
-       "      <td>-0.07710</td>\n",
-       "      <td>-0.07000</td>\n",
-       "      <td>0.030</td>\n",
-       "      <td>-0.0486</td>\n",
-       "      <td>-0.12000</td>\n",
-       "      <td>0.03290</td>\n",
-       "      <td>-0.04040</td>\n",
-       "      <td>2022-02-12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1815111</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>2</td>\n",
-       "      <td>12</td>\n",
-       "      <td>56037</td>\n",
-       "      <td>-0.09860</td>\n",
-       "      <td>-0.07000</td>\n",
-       "      <td>0.030</td>\n",
-       "      <td>0.3770</td>\n",
-       "      <td>-0.17000</td>\n",
-       "      <td>0.02000</td>\n",
-       "      <td>-0.02360</td>\n",
-       "      <td>2022-02-12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1815112</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>2</td>\n",
-       "      <td>12</td>\n",
-       "      <td>56039</td>\n",
-       "      <td>-0.10300</td>\n",
-       "      <td>-0.07000</td>\n",
-       "      <td>0.179</td>\n",
-       "      <td>-0.0471</td>\n",
-       "      <td>-0.13900</td>\n",
-       "      <td>0.02000</td>\n",
-       "      <td>-0.02360</td>\n",
-       "      <td>2022-02-12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1815113</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>2</td>\n",
-       "      <td>12</td>\n",
-       "      <td>56041</td>\n",
-       "      <td>0.16600</td>\n",
-       "      <td>-0.07000</td>\n",
-       "      <td>0.179</td>\n",
-       "      <td>-0.2870</td>\n",
-       "      <td>-0.13700</td>\n",
-       "      <td>0.02000</td>\n",
-       "      <td>-0.02360</td>\n",
-       "      <td>2022-02-12</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1815114 rows × 12 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         year  month  day countyfips  gps_retail_and_recreation  \\\n",
-       "0        2020      2   24      01001                   -0.02290   \n",
-       "1        2020      2   24      01003                    0.11600   \n",
-       "2        2020      2   24      01005                    0.01860   \n",
-       "3        2020      2   24      01007                   -0.01140   \n",
-       "4        2020      2   24      01009                   -0.00286   \n",
-       "...       ...    ...  ...        ...                        ...   \n",
-       "1815109  2022      2   12      56029                   -0.03290   \n",
-       "1815110  2022      2   12      56033                   -0.07710   \n",
-       "1815111  2022      2   12      56037                   -0.09860   \n",
-       "1815112  2022      2   12      56039                   -0.10300   \n",
-       "1815113  2022      2   12      56041                    0.16600   \n",
-       "\n",
-       "         gps_grocery_and_pharmacy  gps_parks  gps_transit_stations  \\\n",
-       "0                        -0.00857      0.000                0.0000   \n",
-       "1                         0.11600      0.387                0.0771   \n",
-       "2                        -0.12300      0.387                0.0771   \n",
-       "3                         0.00429      0.387                0.0771   \n",
-       "4                        -0.01140      0.387                0.0771   \n",
-       "...                           ...        ...                   ...   \n",
-       "1815109                  -0.07000      0.030               -0.0486   \n",
-       "1815110                  -0.07000      0.030               -0.0486   \n",
-       "1815111                  -0.07000      0.030                0.3770   \n",
-       "1815112                  -0.07000      0.179               -0.0471   \n",
-       "1815113                  -0.07000      0.179               -0.2870   \n",
-       "\n",
-       "         gps_workplaces  gps_residential  gps_away_from_home       date  \n",
-       "0               0.03290          0.00571            -0.00626 2020-02-24  \n",
-       "1              -0.00143          0.00000             0.00442 2020-02-24  \n",
-       "2               0.01570          0.00000             0.00442 2020-02-24  \n",
-       "3               0.03570          0.00000             0.00442 2020-02-24  \n",
-       "4               0.01290          0.01860            -0.02000 2020-02-24  \n",
-       "...                 ...              ...                 ...        ...  \n",
-       "1815109        -0.07140          0.03290            -0.04040 2022-02-12  \n",
-       "1815110        -0.12000          0.03290            -0.04040 2022-02-12  \n",
-       "1815111        -0.17000          0.02000            -0.02360 2022-02-12  \n",
-       "1815112        -0.13900          0.02000            -0.02360 2022-02-12  \n",
-       "1815113        -0.13700          0.02000            -0.02360 2022-02-12  \n",
-       "\n",
-       "[1815114 rows x 12 columns]"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mobility[[\"gps_retail_and_recreation\", \"gps_grocery_and_pharmacy\",\n",
     "     \"gps_parks\", \"gps_transit_stations\", \"gps_workplaces\",\"gps_residential\", \"gps_away_from_home\"]] = mobility[[\"gps_retail_and_recreation\", \"gps_grocery_and_pharmacy\",\n",
